# python-monorepo

./: .gitignore
projects/beam-runner/: .dockerignore  Dockerfile  Makefile.common  README.md  docker-compose.yml  pyproject.toml
projects/beam-runner/beam_runner/: __main__.py
projects/beam-runner/tests/: test_beam_runner.py
